reformat everything, added JsonSchema and Jackson parsers